--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,11 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+// Custom
+@import "custom";
+
+
+.bg-danger-2 {
+    background-color: $red-300;
+}
